@@ -1,3 +1,11 @@
+2010-02-03  Marc-André Lureau  <mlureau@flumotion.com>
+
+	reviewed by: Zaheer Abbas Merali
+
+	* flumotion/monitor/nagios/stream.py:
+	Adding a simple nagios check for HLS stream.
+	Removing 'token' dead code.
+
 2010-01-22  Julien Le Goff  <jlegoff@flumotion.com>
 
 	* flumotion/component/plugs/manhole.py:
